attempt with renko

--- a/hyperparameter_search.ipynb
+++ b/hyperparameter_search.ipynb
@@ -9,11 +9,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {
         "tags": []
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\WilliamFetzner\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\gymnasium\\envs\\registration.py:694: UserWarning: \u001b[33mWARN: Overriding environment forex-hedge-v0 already in registry.\u001b[0m\n",
+            "  logger.warn(f\"Overriding environment {new_spec.id} already in registry.\")\n",
+            "c:\\Users\\WilliamFetzner\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\gymnasium\\envs\\registration.py:694: UserWarning: \u001b[33mWARN: Overriding environment forex-unhedge-v0 already in registry.\u001b[0m\n",
+            "  logger.warn(f\"Overriding environment {new_spec.id} already in registry.\")\n",
+            "c:\\Users\\WilliamFetzner\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\gymnasium\\envs\\registration.py:694: UserWarning: \u001b[33mWARN: Overriding environment stocks-hedge-v0 already in registry.\u001b[0m\n",
+            "  logger.warn(f\"Overriding environment {new_spec.id} already in registry.\")\n",
+            "c:\\Users\\WilliamFetzner\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\gymnasium\\envs\\registration.py:694: UserWarning: \u001b[33mWARN: Overriding environment stocks-unhedge-v0 already in registry.\u001b[0m\n",
+            "  logger.warn(f\"Overriding environment {new_spec.id} already in registry.\")\n",
+            "c:\\Users\\WilliamFetzner\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\gymnasium\\envs\\registration.py:694: UserWarning: \u001b[33mWARN: Overriding environment crypto-hedge-v0 already in registry.\u001b[0m\n",
+            "  logger.warn(f\"Overriding environment {new_spec.id} already in registry.\")\n",
+            "c:\\Users\\WilliamFetzner\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\gymnasium\\envs\\registration.py:694: UserWarning: \u001b[33mWARN: Overriding environment crypto-unhedge-v0 already in registry.\u001b[0m\n",
+            "  logger.warn(f\"Overriding environment {new_spec.id} already in registry.\")\n",
+            "c:\\Users\\WilliamFetzner\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\gymnasium\\envs\\registration.py:694: UserWarning: \u001b[33mWARN: Overriding environment mixed-hedge-v0 already in registry.\u001b[0m\n",
+            "  logger.warn(f\"Overriding environment {new_spec.id} already in registry.\")\n",
+            "c:\\Users\\WilliamFetzner\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\gymnasium\\envs\\registration.py:694: UserWarning: \u001b[33mWARN: Overriding environment mixed-unhedge-v0 already in registry.\u001b[0m\n",
+            "  logger.warn(f\"Overriding environment {new_spec.id} already in registry.\")\n"
+          ]
+        }
+      ],
       "source": [
         "from tqdm import tqdm\n",
         "import random\n",
@@ -49,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -63,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -157,7 +180,7 @@
               "2017-11-15 09:09:28.118  1.1805  1.18100  1.18037  1.1810   537.0"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -172,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -182,13 +205,18 @@
         "    \n",
         "# replace the data in the pickle file with the new data\n",
         "symbols_new[1]['EURUSD'] = renko_df\n",
+        "zero = {'EURUSD': symbols_new[0]['EURUSD']}\n",
+        "one = {'EURUSD': symbols_new[1]['EURUSD']}\n",
+        "symbols_new = (zero, one)\n",
+        "symbols_new\n",
+        "\n",
         "with open(FOREX_DATA_PATH_RENKO, 'wb') as f:\n",
         "    pickle.dump(symbols_new, f)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -213,7 +241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -226,7 +254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -239,7 +267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -252,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -265,7 +293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -283,7 +311,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -294,9 +322,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 13,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ValueError",
+          "evalue": "setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (85087,) + inhomogeneous part.",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[13], line 10\u001b[0m\n\u001b[0;32m      1\u001b[0m sim_train_1hr \u001b[38;5;241m=\u001b[39m gym_mtsim\u001b[38;5;241m.\u001b[39mMtSimulator(\n\u001b[0;32m      2\u001b[0m     unit\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUSD\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      3\u001b[0m     balance\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m200000.\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m      7\u001b[0m     symbols_filename\u001b[38;5;241m=\u001b[39mFOREX_DATA_PATH_RENKO\n\u001b[0;32m      8\u001b[0m )\n\u001b[1;32m---> 10\u001b[0m env_train_1hr \u001b[38;5;241m=\u001b[39m \u001b[43mgym_mtsim\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mMtEnv\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     11\u001b[0m \u001b[43m    \u001b[49m\u001b[43moriginal_simulator\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msim_train_1hr\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     12\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtrading_symbols\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mEURUSD\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     13\u001b[0m \u001b[43m    \u001b[49m\u001b[43mwindow_size\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     14\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtime_points\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mslices_1hr\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     15\u001b[0m \u001b[43m    \u001b[49m\u001b[43mhold_threshold\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     16\u001b[0m \u001b[43m    \u001b[49m\u001b[43mclose_threshold\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     17\u001b[0m \u001b[43m    \u001b[49m\u001b[43mfee\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43msymbol\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\n\u001b[0;32m     18\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;66;43;03m# 'GBPCAD': max(0., np.random.normal(0.0007, 0.00005)),\u001b[39;49;00m\n\u001b[0;32m     19\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mEURUSD\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mmax\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0.\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnormal\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0.0001\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.00003\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     20\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;66;43;03m# 'USDJPY': max(0., np.random.normal(0.02, 0.003)),\u001b[39;49;00m\n\u001b[0;32m     21\u001b[0m \u001b[43m    \u001b[49m\u001b[43m}\u001b[49m\u001b[43m[\u001b[49m\u001b[43msymbol\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     22\u001b[0m \u001b[43m    \u001b[49m\u001b[43msymbol_max_orders\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     23\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m# multiprocessing_processes=2\u001b[39;49;00m\n\u001b[0;32m     24\u001b[0m \u001b[43m)\u001b[49m\n",
+            "File \u001b[1;32mc:\\Users\\WilliamFetzner\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\gym_mtsim\\envs\\mt_env.py:70\u001b[0m, in \u001b[0;36mMtEnv.__init__\u001b[1;34m(self, original_simulator, trading_symbols, window_size, time_points, hold_threshold, close_threshold, fee, symbol_max_orders, multiprocessing_processes, render_mode)\u001b[0m\n\u001b[0;32m     67\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msymbol_max_orders \u001b[38;5;241m=\u001b[39m symbol_max_orders\n\u001b[0;32m     68\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmultiprocessing_pool \u001b[38;5;241m=\u001b[39m Pool(multiprocessing_processes) \u001b[38;5;28;01mif\u001b[39;00m multiprocessing_processes \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m---> 70\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprices \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_prices\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     71\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msignal_features \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_process_data()\n\u001b[0;32m     72\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfeatures_shape \u001b[38;5;241m=\u001b[39m (window_size, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msignal_features\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m])\n",
+            "File \u001b[1;32mc:\\Users\\WilliamFetzner\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\gym_mtsim\\envs\\mt_env.py:212\u001b[0m, in \u001b[0;36mMtEnv._get_prices\u001b[1;34m(self, keys)\u001b[0m\n\u001b[0;32m    209\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    210\u001b[0m         p \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmultiprocessing_pool\u001b[38;5;241m.\u001b[39mmap(get_price_at, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtime_points)\n\u001b[1;32m--> 212\u001b[0m     prices[symbol] \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mp\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    214\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m prices\n",
+            "\u001b[1;31mValueError\u001b[0m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (85087,) + inhomogeneous part."
+          ]
+        }
+      ],
       "source": [
         "sim_train_1hr = gym_mtsim.MtSimulator(\n",
         "    unit='USD',\n",
@@ -320,13 +362,13 @@
         "        # 'USDJPY': max(0., np.random.normal(0.02, 0.003)),\n",
         "    }[symbol],\n",
         "    symbol_max_orders=2,\n",
-        "    multiprocessing_processes=2\n",
+        "    # multiprocessing_processes=2\n",
         ")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -358,7 +400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -390,7 +432,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -422,7 +464,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -454,7 +496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -486,7 +528,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -525,7 +567,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -609,7 +651,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -626,7 +668,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -714,7 +756,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -732,7 +774,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "tags": []
       },
@@ -819,7 +861,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -836,7 +878,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -846,7 +888,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -3134,7 +3176,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -3154,7 +3196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -3174,7 +3216,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -3367,7 +3409,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -3720,7 +3762,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -3729,7 +3771,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -3738,7 +3780,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -3794,7 +3836,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -3819,7 +3861,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -3865,7 +3907,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -3929,7 +3971,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -4316,7 +4358,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -4354,7 +4396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -4406,7 +4448,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -4446,7 +4488,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
