--- a/hyperparameter_search.ipynb
+++ b/hyperparameter_search.ipynb
@@ -611,10 +611,78 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 20,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
+      "source": [
+        "Look into these links: \n",
+        "https://machinelearningmastery.com/how-to-use-the-timeseriesgenerator-for-time-series-forecasting-in-keras/\n",
+        "https://machinelearningmastery.com/convert-time-series-supervised-learning-problem-python/\n",
+        "\n",
+        "prompt:\n",
+        "when training, validating, and testing a reinforcement learning PPO forex trading bot that I plan to re-train over the weekend to prepare for the following week, what would be the best training, validation, and testing split for the data? I am looking to trade on the 1-hour timeframe and have historic data for the past 50,000 1-hour trading bars.\n",
+        "\n",
+        "I can't find any evidence online to support this, but all the LLMs are recommending this:\n",
+        "\n",
+        "Here's a breakdown of how to approach the data split for your PPO forex trading bot, along with considerations for your 1-hour timeframe and re-training schedule:\n",
+        "\n",
+        "**Understanding the Goal**\n",
+        "\n",
+        "Your primary goal is to ensure your bot generalizes well to unseen market conditions in the coming week. Since markets are dynamic, a strong emphasis on recent data is essential.\n",
+        "\n",
+        "**Recommended Split**\n",
+        "\n",
+        "Given your re-training frequency and the dynamic nature of forex, I'd recommend the following split:\n",
+        "\n",
+        "* **Training:** 70% (35,000 bars) -  Focus on the most recent data. This will give your PPO agent the most relevant learning material.\n",
+        "* **Validation:** 15% (7,500 bars) - Use a period just before your training set. This helps you assess how well the model is adapting to slightly older market behavior and to fine-tune hyperparameters.\n",
+        "* **Testing:** 15% (7,500 bars) - This should be the oldest data, representing market conditions furthest from your training data. This is your final performance evaluation before live trading.\n",
+        "\n",
+        "**Data Period Selection**\n",
+        "\n",
+        "1. **Recency Bias:** Given your weekly re-training, prioritize the most recent 10-12 weeks of data. Forex markets can shift considerably, and older data might be less representative of current conditions.\n",
+        "2. **Seasonality Considerations:** If your trading strategy is sensitive to specific days of the week or times of day, ensure your data split captures a representative sample across those periods. For example, include weekends if you plan to trade then.\n",
+        "3. **Rolling Window:** Consider using a rolling window approach. Each week, shift your data window forward, dropping the oldest week and adding the most recent week. This keeps your bot adapting to the latest market dynamics.\n",
+        "\n",
+        "**Example:**\n",
+        "\n",
+        "* **This Week (Live Trading):**  July 29th - August 4th\n",
+        "* **Training:** June 12th - July 28th (35,000 bars)\n",
+        "* **Validation:** May 29th - June 11th (7,500 bars)\n",
+        "* **Testing:** May 15th - May 28th (7,500 bars)\n",
+        "\n",
+        "**Next Week's Re-Training:**\n",
+        "\n",
+        "* **Training:** June 19th - August 4th\n",
+        "* **Validation:** June 5th - June 18th\n",
+        "* **Testing:** May 22nd - June 4th\n",
+        "\n",
+        "**Important Notes:**\n",
+        "\n",
+        "* **Walk-Forward Analysis:** Once you have a promising model, rigorously test it with walk-forward analysis.  This involves simulating trading over your historical data period, advancing your data window step-by-step to see how the model performs over time.\n",
+        "* **Overfitting:** Carefully monitor for overfitting to your training data. A large performance gap between training and validation/test sets is a sign of overfitting. \n",
+        "* **Hyperparameter Tuning:**  Use the validation set to optimize your PPO algorithm's hyperparameters (learning rate, network architecture, etc.).\n",
+        "\n",
+        "**Remember:** Market conditions change. There's no \"perfect\" data split. Continuously monitor your bot's performance and adjust your training methodology as needed. \n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'max_date_1hr' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[2], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# create a folder with the name of the date\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m os\u001b[38;5;241m.\u001b[39mmakedirs(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmodels_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mmax_date_1hr\u001b[49m\u001b[38;5;241m.\u001b[39mdate()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'max_date_1hr' is not defined"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "# create a folder with the name of the date\n",
