Getting the data ready in the format needed for when the models finish training

--- a/Ensemble_RL_SARIMA.ipynb
+++ b/Ensemble_RL_SARIMA.ipynb
@@ -9,7 +9,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": 5,
       "metadata": {
         "tags": []
       },
@@ -21,6 +21,7 @@
         "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
+        "import polars as pl\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -159,16 +160,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Timestamp('2016-08-17 06:00:00+0000', tz='UTC')"
+              "Timestamp('2016-08-23 16:00:00+0000', tz='UTC')"
             ]
           },
-          "execution_count": 119,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -185,11 +186,145 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
         "# possible other pairs to look into = ['EURUSD', 'AUDCHF', 'NZDCHF', 'GBPNZD', 'USDCAD']"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Close</th>\n",
+              "      <th>seconds_since_last_news_event</th>\n",
+              "      <th>seconds_to_next_news_event</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Time</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2016-08-01 03:00:00+00:00</th>\n",
+              "      <td>1.11712</td>\n",
+              "      <td>-14400</td>\n",
+              "      <td>50400</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2016-08-01 04:00:00+00:00</th>\n",
+              "      <td>1.11734</td>\n",
+              "      <td>-18000</td>\n",
+              "      <td>46800</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2016-08-01 05:00:00+00:00</th>\n",
+              "      <td>1.11720</td>\n",
+              "      <td>-21600</td>\n",
+              "      <td>43200</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2016-08-01 06:00:00+00:00</th>\n",
+              "      <td>1.11735</td>\n",
+              "      <td>-25200</td>\n",
+              "      <td>39600</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2016-08-01 07:00:00+00:00</th>\n",
+              "      <td>1.11786</td>\n",
+              "      <td>-28800</td>\n",
+              "      <td>36000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                             Close  seconds_since_last_news_event  \\\n",
+              "Time                                                                \n",
+              "2016-08-01 03:00:00+00:00  1.11712                         -14400   \n",
+              "2016-08-01 04:00:00+00:00  1.11734                         -18000   \n",
+              "2016-08-01 05:00:00+00:00  1.11720                         -21600   \n",
+              "2016-08-01 06:00:00+00:00  1.11735                         -25200   \n",
+              "2016-08-01 07:00:00+00:00  1.11786                         -28800   \n",
+              "\n",
+              "                           seconds_to_next_news_event  \n",
+              "Time                                                   \n",
+              "2016-08-01 03:00:00+00:00                       50400  \n",
+              "2016-08-01 04:00:00+00:00                       46800  \n",
+              "2016-08-01 05:00:00+00:00                       43200  \n",
+              "2016-08-01 06:00:00+00:00                       39600  \n",
+              "2016-08-01 07:00:00+00:00                       36000  "
+            ]
+          },
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "with open(FOREX_DATA_PATH, 'rb') as f:\n",
+        "    symbols_1hr = pickle.load(f)\n",
+        "# convert symbols_1hr to a pd.dataframe\n",
+        "symbols_1hr[1]['EURUSD'].index = pd.to_datetime(symbols_1hr[1]['EURUSD'].index)\n",
+        "full_data = symbols_1hr[1]['EURUSD']\n",
+        "full_data.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "no news data found\n"
+          ]
+        }
+      ],
+      "source": [
+        "# pl_df = pl.from_pandas(full_data.reset_index())\\\n",
+        "#     .with_columns([\n",
+        "#         pl.col('Time').alias('ds'),\n",
+        "#         ((pl.col('Open').cast(pl.Float64) + pl.col('High').cast(pl.Float64)\n",
+        "#            + pl.col('Low').cast(pl.Float64) + pl.col('Close').cast(pl.Float64)) / 4).round(5).alias('Close')\n",
+        "#     ]).select('Time', 'Close', 'ds')\n",
+        "# news_data = concat_latest_data.check_for_new_news()\n",
+        "# news_counts = news_data.group_by('datetime').len().sort(by='datetime')\n",
+        "\n",
+        "# df_w_news = concat_latest_data.find_seconds_to_next_news(pl_df, news_counts)\n",
+        "# df_ready = df_w_news.drop('ds').to_pandas().set_index('Time')\n",
+        "# symbols_1hr[1]['EURUSD'] = df_ready\n",
+        "# with open(FOREX_DATA_PATH, 'wb') as f:\n",
+        "#     pickle.dump(symbols_1hr, f)"
       ]
     },
     {
