changed the environments to be the 'MyMtEnv with the adjusted price rather than mtEnv

--- a/Ensemble_RL_SARIMA.ipynb
+++ b/Ensemble_RL_SARIMA.ipynb
@@ -299,6 +299,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "class MyMtEnv(gym_mtsim.MtEnv):\n",
+        "    # _get_modified_volume = fx_rl.my_get_modified_volume\n",
+        "    _get_prices = fx_rl.my_get_prices"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 12,
       "metadata": {},
       "outputs": [
@@ -515,7 +526,7 @@
         "    symbols_filename=FOREX_DATA_PATH\n",
         ")\n",
         "\n",
-        "env_train_1hr = gym_mtsim.MtEnv(\n",
+        "env_train_1hr = MyMtEnv(# gym_mtsim.MtEnv\n",
         "    original_simulator=sim_train_1hr,\n",
         "    trading_symbols=['EURUSD'],\n",
         "    window_size = 10,\n",
@@ -547,7 +558,7 @@
         "    symbols_filename=FOREX_DATA_PATH\n",
         ")\n",
         "\n",
-        "env_validation_1hr = gym_mtsim.MtEnv(\n",
+        "env_validation_1hr = MyMtEnv(# gym_mtsim.MtEnv\n",
         "    original_simulator=sim_validation_1hr,\n",
         "    trading_symbols=['EURUSD'],\n",
         "    window_size = 10,\n",
@@ -577,7 +588,7 @@
         "    symbols_filename=FOREX_DATA_PATH\n",
         ")\n",
         "\n",
-        "env_testing = gym_mtsim.MtEnv(\n",
+        "env_testing = MyMtEnv( # gym_mtsim.MtEnv\n",
         "    original_simulator=sim_testing,\n",
         "    trading_symbols=['EURUSD'],\n",
         "    window_size = 10,\n",
