removing old find_exit_price function

--- a/Random_walk_pred_strategy.ipynb
+++ b/Random_walk_pred_strategy.ipynb
@@ -731,62 +731,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div><style>\n",
-       ".dataframe > thead > tr,\n",
-       ".dataframe > tbody > tr {\n",
-       "  text-align: right;\n",
-       "  white-space: pre-wrap;\n",
-       "}\n",
-       "</style>\n",
-       "<small>shape: (4_323, 7)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>direction</th><th>entry_time</th><th>entry_price</th><th>take_profit</th><th>stop_loss</th><th>exit_time</th><th>exit_price</th></tr><tr><td>str</td><td>datetime[μs]</td><td>f64</td><td>f64</td><td>f64</td><td>datetime[μs]</td><td>f64</td></tr></thead><tbody><tr><td>&quot;buy&quot;</td><td>2018-03-08 14:00:00</td><td>1.241</td><td>1.24265</td><td>1.23968</td><td>2018-03-08 15:00:00</td><td>1.24265</td></tr><tr><td>&quot;sell&quot;</td><td>2018-03-08 16:00:00</td><td>1.23508</td><td>1.23343</td><td>1.2364</td><td>2018-03-08 17:00:00</td><td>1.23343</td></tr><tr><td>&quot;sell&quot;</td><td>2018-03-09 10:00:00</td><td>1.2306</td><td>1.22895</td><td>1.23192</td><td>2018-03-09 11:00:00</td><td>1.22895</td></tr><tr><td>&quot;buy&quot;</td><td>2018-03-09 16:00:00</td><td>1.23121</td><td>1.23286</td><td>1.22989</td><td>2018-03-09 17:00:00</td><td>1.23286</td></tr><tr><td>&quot;buy&quot;</td><td>2018-03-12 10:00:00</td><td>1.23375</td><td>1.2354</td><td>1.23243</td><td>2018-03-12 11:00:00</td><td>1.23243</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>&quot;sell&quot;</td><td>2024-08-05 18:00:00</td><td>1.09561</td><td>1.09396</td><td>1.09693</td><td>2024-08-05 19:00:00</td><td>1.09396</td></tr><tr><td>&quot;buy&quot;</td><td>2024-08-06 03:00:00</td><td>1.09627</td><td>1.09792</td><td>1.09495</td><td>2024-08-06 08:00:00</td><td>1.09495</td></tr><tr><td>&quot;sell&quot;</td><td>2024-08-07 04:00:00</td><td>1.09181</td><td>1.09016</td><td>1.09313</td><td>2024-08-07 05:00:00</td><td>1.09016</td></tr><tr><td>&quot;buy&quot;</td><td>2024-08-07 17:00:00</td><td>1.09318</td><td>1.09483</td><td>1.09186</td><td>2024-08-07 20:00:00</td><td>1.09186</td></tr><tr><td>&quot;sell&quot;</td><td>2024-08-08 15:00:00</td><td>1.08974</td><td>1.08809</td><td>1.09106</td><td>2024-08-08 16:00:00</td><td>1.08809</td></tr></tbody></table></div>"
-      ],
-      "text/plain": [
-       "shape: (4_323, 7)\n",
-       "┌───────────┬────────────────┬─────────────┬─────────────┬───────────┬────────────────┬────────────┐\n",
-       "│ direction ┆ entry_time     ┆ entry_price ┆ take_profit ┆ stop_loss ┆ exit_time      ┆ exit_price │\n",
-       "│ ---       ┆ ---            ┆ ---         ┆ ---         ┆ ---       ┆ ---            ┆ ---        │\n",
-       "│ str       ┆ datetime[μs]   ┆ f64         ┆ f64         ┆ f64       ┆ datetime[μs]   ┆ f64        │\n",
-       "╞═══════════╪════════════════╪═════════════╪═════════════╪═══════════╪════════════════╪════════════╡\n",
-       "│ buy       ┆ 2018-03-08     ┆ 1.241       ┆ 1.24265     ┆ 1.23968   ┆ 2018-03-08     ┆ 1.24265    │\n",
-       "│           ┆ 14:00:00       ┆             ┆             ┆           ┆ 15:00:00       ┆            │\n",
-       "│ sell      ┆ 2018-03-08     ┆ 1.23508     ┆ 1.23343     ┆ 1.2364    ┆ 2018-03-08     ┆ 1.23343    │\n",
-       "│           ┆ 16:00:00       ┆             ┆             ┆           ┆ 17:00:00       ┆            │\n",
-       "│ sell      ┆ 2018-03-09     ┆ 1.2306      ┆ 1.22895     ┆ 1.23192   ┆ 2018-03-09     ┆ 1.22895    │\n",
-       "│           ┆ 10:00:00       ┆             ┆             ┆           ┆ 11:00:00       ┆            │\n",
-       "│ buy       ┆ 2018-03-09     ┆ 1.23121     ┆ 1.23286     ┆ 1.22989   ┆ 2018-03-09     ┆ 1.23286    │\n",
-       "│           ┆ 16:00:00       ┆             ┆             ┆           ┆ 17:00:00       ┆            │\n",
-       "│ buy       ┆ 2018-03-12     ┆ 1.23375     ┆ 1.2354      ┆ 1.23243   ┆ 2018-03-12     ┆ 1.23243    │\n",
-       "│           ┆ 10:00:00       ┆             ┆             ┆           ┆ 11:00:00       ┆            │\n",
-       "│ …         ┆ …              ┆ …           ┆ …           ┆ …         ┆ …              ┆ …          │\n",
-       "│ sell      ┆ 2024-08-05     ┆ 1.09561     ┆ 1.09396     ┆ 1.09693   ┆ 2024-08-05     ┆ 1.09396    │\n",
-       "│           ┆ 18:00:00       ┆             ┆             ┆           ┆ 19:00:00       ┆            │\n",
-       "│ buy       ┆ 2024-08-06     ┆ 1.09627     ┆ 1.09792     ┆ 1.09495   ┆ 2024-08-06     ┆ 1.09495    │\n",
-       "│           ┆ 03:00:00       ┆             ┆             ┆           ┆ 08:00:00       ┆            │\n",
-       "│ sell      ┆ 2024-08-07     ┆ 1.09181     ┆ 1.09016     ┆ 1.09313   ┆ 2024-08-07     ┆ 1.09016    │\n",
-       "│           ┆ 04:00:00       ┆             ┆             ┆           ┆ 05:00:00       ┆            │\n",
-       "│ buy       ┆ 2024-08-07     ┆ 1.09318     ┆ 1.09483     ┆ 1.09186   ┆ 2024-08-07     ┆ 1.09186    │\n",
-       "│           ┆ 17:00:00       ┆             ┆             ┆           ┆ 20:00:00       ┆            │\n",
-       "│ sell      ┆ 2024-08-08     ┆ 1.08974     ┆ 1.08809     ┆ 1.09106   ┆ 2024-08-08     ┆ 1.08809    │\n",
-       "│           ┆ 15:00:00       ┆             ┆             ┆           ┆ 16:00:00       ┆            │\n",
-       "└───────────┴────────────────┴─────────────┴─────────────┴───────────┴────────────────┴────────────┘"
-      ]
-     },
-     "execution_count": 216,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'positions' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m exit_times \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      2\u001b[0m exit_prices \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m \u001b[43mpositions\u001b[49m\u001b[38;5;241m.\u001b[39miter_rows():\n\u001b[0;32m      4\u001b[0m     exit_time, exit_price \u001b[38;5;241m=\u001b[39m find_exit_price([row[\u001b[38;5;241m0\u001b[39m], row[\u001b[38;5;241m1\u001b[39m], row[\u001b[38;5;241m4\u001b[39m], row[\u001b[38;5;241m3\u001b[39m]])\n\u001b[0;32m      5\u001b[0m     exit_times\u001b[38;5;241m.\u001b[39mappend(exit_time)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'positions' is not defined"
+     ]
     }
    ],
    "source": [
     "exit_times = []\n",
     "exit_prices = []\n",
     "for row in positions.iter_rows():\n",
-    "    exit_time, exit_price = find_exit_price([row[1], row[4], row[3]])\n",
+    "    exit_time, exit_price = find_exit_price([row[0], row[1], row[4], row[3]])\n",
     "    exit_times.append(exit_time)\n",
     "    exit_prices.append(exit_price)\n",
     "    \n",
